# r17

./: LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  r17.cpp  r17_test.cpp
include/np1/: assert.hpp  global_info.hpp  math.hpp  preproc.hpp  simple_types.hpp
include/np1/help/: markdown.hpp
include/np1/io/: buffered_input_stream.hpp  directory.hpp  ext_heap_buffer_output_stream.hpp  heap_buffer_output_stream.hpp  mandatory_mapped_record_input_file.hpp  mandatory_record_input_stream.hpp  string_output_stream.hpp  text_input_stream.hpp  work_distributor.hpp
include/np1/meta/: dispatch.hpp  parallel_explicit_mapping.hpp  script.hpp  stream_op_table.hpp
include/np1/rel/: assert.hpp  distributed_where.hpp  from_text.hpp  join_left.hpp  join_natural.hpp  record.hpp  unique.hpp
include/np1/text/: strip_cr.hpp
include/std/: list  map  multimap  stack
include/std/detail/: mem.hpp
lib/liberal/curl/: README
lib/liberal/int64/: README.txt  int64.cpp  int64.hpp
lib/liberal/pcre/: README
lib/liberal/snappy/: README
lib/liberal/zlib/: README
np1/: assert.hpp  environment.hpp  fixed_homogenous_heap.hpp  global_info.hpp  process.hpp  skip_list.hpp  str.hpp  time.hpp  uuid.hpp
np1/help/: markdown.hpp
np1/io/: buffer_input_stream.hpp  buffered_input_stream.hpp  buffered_output_stream.hpp  directory.hpp  ext_heap_buffer_output_stream.hpp  ext_static_buffer_output_stream.hpp  file.hpp  file_mapping.hpp  gzfile.hpp  heap_buffer_output_stream.hpp  log.hpp  mandatory_input_stream.hpp  mandatory_mapped_record_input_file.hpp  mandatory_record_input_stream.hpp  named_temp_file.hpp  ordered_work_distributor.hpp  path.hpp  random.hpp  reliable_storage.hpp  shpfile.hpp  snappy_file.hpp  static_buffer_output_stream.hpp  string_input_stream.hpp  string_output_stream.hpp  text_input_stream.hpp  unbuffered_stream_base.hpp  utf16_input_stream.hpp  work_distributor.hpp
np1/io/detail/: stream_helper.hpp
np1/io/net/: curl.hpp  ip_endpoint.hpp  udp_messenger.hpp
np1/json/: parser.hpp  tokenizer.hpp  writer.hpp
np1/lang/: python.hpp  r.hpp
np1/lang/detail/: helper.hpp
np1/meta/: dispatch.hpp  parallel_explicit_mapping.hpp  remote.hpp  script.hpp  shell.hpp  stream_op_table.hpp  worker.hpp
np1/regex/: pattern.hpp  pattern_cache.hpp
np1/rel/: assert.hpp  csv_translate.hpp  distributed.hpp  distributed_group.hpp  distributed_select.hpp  distributed_str_split.hpp  distributed_where.hpp  from_shapefile.hpp  from_text.hpp  generate_sequence.hpp  group.hpp  join_anti.hpp  join_consistent_hash.hpp  join_left.hpp  join_natural.hpp  order_by.hpp  record.hpp  record_count.hpp  record_ref.hpp  record_split.hpp  select.hpp  str_split.hpp  tsv_translate.hpp  unique.hpp  usv_translate.hpp  where.hpp
np1/rel/detail/: compare_spec.hpp  compare_specs.hpp  helper.hpp  join_helper.hpp  merge_sort.hpp  quick_sort.hpp  record_multihashmap.hpp  record_multimap.hpp  sort_manager.hpp
np1/rel/recordset/: create.hpp  read.hpp  translate.hpp
np1/rel/rlang/: compiler.hpp  dt.hpp  shunting_yard.hpp  token.hpp  vm_heap.hpp  vm_stack.hpp
np1/text/: strip_cr.hpp  utf16_to_utf8.hpp
nplus1/apps/r17/: Makefile  uname.bat
nplus1/include/np1/: compressed_int.hpp  consistent_hash_table.hpp  environment.hpp  fixed_homogenous_heap.hpp  process.hpp  skip_list.hpp
nplus1/include/std/: auto_ptr  pair  string  swap  vector
rstd/: auto_ptr.hpp  list.hpp  move.hpp  pair.hpp  stack.hpp  string.hpp  swap.hpp  vector.hpp
rstd/detail/: mem.hpp
test/unit/: helper.hpp
(+146 files in other folders)
